tests/snapshots/golden_mapping_tests__autofix_patch_basic.snap
---
source: tests/golden_mapping_tests.rs
expression: stdout
---
Autofix patch generation not yet implemented
