tests/snapshots/golden_mapping_tests__autofix_snippet_basic.snap
---
source: tests/golden_mapping_tests.rs
expression: stdout
---
Autofix snippet generation not yet implemented
