tests/snapshots/golden_mapping_tests__empty_graph.snap
---
source: tests/golden_mapping_tests.rs
expression: json_output
---
{
  "edges": [],
  "metadata": {
    "edge_count": 0,
    "has_cycles": false,
    "max_depth": 0,
    "node_count": 0,
    "timestamp": "2024-01-01T00:00:00Z",
    "total_cost": 0.0,
    "version": "1.0.1"
  },
  "nodes": []
}
